[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wenex"
version = "0.1.0"
description = "A simple greeting package"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}

authors = [
    {name = "Your Name", email = "you@example.com"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/greeting"
