[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"
python = "3.12"

[tool.hatch.envs.default.scripts]
fmt = "ruff format src tests"
lint = "ruff check src tests"
check = [
  "ruff check src tests",
  "ruff format --check src tests"
]

[project]
name = "wenex"
dynamic = ["version"]
description = 'Wenex SDK'
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["sdk", "wenex", "wenex-sdk"]
authors = [
  { name = "Vahid V.", email = "vhid.vz@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Documentation = "https://github.com/wenex-org/python-sdk#readme"
Issues = "https://github.com/wenex-org/python-sdk/issues"
Source = "https://github.com/wenex-org/python-sdk"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]

[tool.hatch.version]
path = "src/wenex/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wenex tests}"

[tool.coverage.run]
source_pkgs = ["wenex", "tests"]
branch = true
parallel = true
omit = [
  "src/wenex/__about__.py",
]

[tool.coverage.paths]
wenex = ["src/wenex", "*/wenex/src/wenex"]
tests = ["tests", "*/wenex/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
